[gd_scene load_steps=27 format=2]

[ext_resource path="res://entities/UCL/CreateNewLevelView.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/logo_small.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/createUCLNext.png" type="Texture" id=5]
[ext_resource path="res://images/questions.tres" type="ButtonGroup" id=6]
[ext_resource path="res://images/inactive1.png" type="Texture" id=7]
[ext_resource path="res://images/inactive2.png" type="Texture" id=8]
[ext_resource path="res://images/inactive3.png" type="Texture" id=9]
[ext_resource path="res://images/inactive4.png" type="Texture" id=10]
[ext_resource path="res://images/inactive5.png" type="Texture" id=11]
[ext_resource path="res://images/createUCL.png" type="Texture" id=12]
[ext_resource path="res://entities/UCL/question1.gd" type="Script" id=13]
[ext_resource path="res://images/q1option.tres" type="ButtonGroup" id=14]
[ext_resource path="res://images/unchecked.png" type="Texture" id=15]
[ext_resource path="res://images/checked.png" type="Texture" id=16]
[ext_resource path="res://entities/UCL/question2.gd" type="Script" id=17]
[ext_resource path="res://images/q2option.tres" type="ButtonGroup" id=18]
[ext_resource path="res://entities/UCL/question3.gd" type="Script" id=19]
[ext_resource path="res://images/q3option.tres" type="ButtonGroup" id=20]
[ext_resource path="res://entities/UCL/question4.gd" type="Script" id=21]
[ext_resource path="res://images/q4option.tres" type="ButtonGroup" id=22]
[ext_resource path="res://entities/UCL/question5.gd" type="Script" id=23]
[ext_resource path="res://images/modal_box.png" type="Texture" id=24]
[ext_resource path="res://entities/UCL/popup.gd" type="Script" id=25]
[ext_resource path="res://images/close_button.png" type="Texture" id=26]

[node name="CreateNewLevelView" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 511.918, 300.609 )
scale = Vector2( 0.853, 0.501 )
texture = ExtResource( 2 )

[node name="LearnEZ" type="Sprite" parent="."]
position = Vector2( 147.77, 63.841 )
scale = Vector2( 0.824, 0.824 )
texture = ExtResource( 3 )

[node name="header" type="RichTextLabel" parent="."]
margin_left = 392.33
margin_top = 74.02
margin_right = 937.33
margin_bottom = 158.02
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "USER CREATED LEVEL"

[node name="enterLevel" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Level Name:"

[node name="enterDesc" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 279.0
margin_right = 952.0
margin_bottom = 367.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Level Desciption:"

[node name="uclDesc" type="TextEdit" parent="."]
margin_left = 80.0
margin_top = 315.0
margin_right = 943.0
margin_bottom = 495.0
wrap_enabled = true

[node name="uclLevel" type="LineEdit" parent="."]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="nextStep" type="TouchScreenButton" parent="."]
position = Vector2( 771.627, 518.45 )
normal = ExtResource( 5 )

[node name="Q1" type="TextureButton" parent="."]
margin_left = 400.0
margin_top = 520.0
margin_right = 440.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 7 )

[node name="Q2" type="TextureButton" parent="."]
margin_left = 450.0
margin_top = 520.0
margin_right = 490.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 8 )

[node name="Q3" type="TextureButton" parent="."]
margin_left = 500.0
margin_top = 520.0
margin_right = 540.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 9 )

[node name="Q4" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = 520.0
margin_right = 590.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 10 )

[node name="Q5" type="TextureButton" parent="."]
margin_left = 600.0
margin_top = 520.0
margin_right = 640.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 11 )

[node name="enterAnswer" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 278.0
margin_right = 1139.0
margin_bottom = 426.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Answer (Choose the correct answer):
"

[node name="create" type="TouchScreenButton" parent="."]
position = Vector2( 774.785, 148.976 )
scale = Vector2( 1.53685, 1 )
normal = ExtResource( 12 )

[node name="question1" type="Container" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )

[node name="Q1" type="LineEdit" parent="question1"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="Q1ans1" type="TextEdit" parent="question1"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q1ans2" type="TextEdit" parent="question1"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q1ans3" type="TextEdit" parent="question1"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q1ans4" type="TextEdit" parent="question1"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q1option1" type="TextureButton" parent="question1"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 14 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q1option2" type="TextureButton" parent="question1"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 14 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q1option3" type="TextureButton" parent="question1"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 14 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q1option4" type="TextureButton" parent="question1"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 14 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="enterQuestion1" type="RichTextLabel" parent="question1"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 1:"

[node name="question2" type="Container" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 17 )

[node name="Q2" type="LineEdit" parent="question2"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="Q2ans1" type="TextEdit" parent="question2"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q2ans2" type="TextEdit" parent="question2"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q2ans3" type="TextEdit" parent="question2"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q2ans4" type="TextEdit" parent="question2"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q2option1" type="TextureButton" parent="question2"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 18 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q2option2" type="TextureButton" parent="question2"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 18 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q2option3" type="TextureButton" parent="question2"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 18 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q2option4" type="TextureButton" parent="question2"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 18 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="enterQuestion2" type="RichTextLabel" parent="question2"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 2:
"
scroll_active = false

[node name="question3" type="Container" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 19 )

[node name="Q3" type="LineEdit" parent="question3"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="Q3ans1" type="TextEdit" parent="question3"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q3ans2" type="TextEdit" parent="question3"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q3ans3" type="TextEdit" parent="question3"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q3ans4" type="TextEdit" parent="question3"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q3option1" type="TextureButton" parent="question3"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 20 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q3option2" type="TextureButton" parent="question3"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 20 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q3option3" type="TextureButton" parent="question3"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 20 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q3option4" type="TextureButton" parent="question3"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 20 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="enterQuestion3" type="RichTextLabel" parent="question3"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 3:"

[node name="question4" type="Container" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 21 )

[node name="Q4" type="LineEdit" parent="question4"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="Q4ans1" type="TextEdit" parent="question4"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q4ans2" type="TextEdit" parent="question4"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q4ans3" type="TextEdit" parent="question4"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q4ans4" type="TextEdit" parent="question4"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q4option1" type="TextureButton" parent="question4"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q4option2" type="TextureButton" parent="question4"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q4option3" type="TextureButton" parent="question4"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q4option4" type="TextureButton" parent="question4"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="enterQuestion4" type="RichTextLabel" parent="question4"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 4:"

[node name="question5" type="Container" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 23 )

[node name="Q5" type="LineEdit" parent="question5"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="Q5ans1" type="TextEdit" parent="question5"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q5ans2" type="TextEdit" parent="question5"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="Q5ans3" type="TextEdit" parent="question5"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q5ans4" type="TextEdit" parent="question5"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="Q5option1" type="TextureButton" parent="question5"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q5option2" type="TextureButton" parent="question5"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q5option3" type="TextureButton" parent="question5"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Q5option4" type="TextureButton" parent="question5"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 22 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="enterQuestion5" type="RichTextLabel" parent="question5"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 5:"

[node name="errorPopup" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 545.793, 278.314 )
scale = Vector2( 0.870917, 0.663116 )
texture = ExtResource( 24 )
script = ExtResource( 25 )

[node name="closeButton" type="TouchScreenButton" parent="errorPopup"]
position = Vector2( 231.299, -108.221 )
scale = Vector2( 0.313611, 0.425074 )
normal = ExtResource( 26 )

[node name="RichTextLabel" type="RichTextLabel" parent="errorPopup"]
margin_left = -182.129
margin_top = -23.8173
margin_right = 625.871
margin_bottom = 195.183
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Missing Fields and/or Answer(s)
"
